--- a/index.html
+++ b/index.html
@@ -59,7 +59,27 @@
         
         </nav>
 
+        <header class="snappy" id="home"><!-- Header -->
 
+            <!-- Overlay -->
+            <div class="overlay"></div>
+
+            <!-- Video BG -->
+            <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+                <source src="media/stockVidBg.mp4" type="video/mp4">
+            </video>
+
+            <!-- Container -->
+            <div class="container vh-100">
+                <div class="d-flex vh-100 text-center align-items-center">
+                    <div class="w-100 text-white">
+                        <h1 class="display-3">TipEASE</h1>
+                        <p class="lead mb-0">Leave A Tip!</p>
+                    </div>
+                </div>
+            </div>
+            
+        </header>
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
