--- a/index.html
+++ b/index.html
@@ -68,43 +68,51 @@
 
             <section class="container-fluid pre-scrollable">
 
-                <div class="container-fluid">
-                    <div class="card w-50">
-                        <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <h4 class="card-title"><a>Card title</a></h4>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Button</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card w-25">
-                    <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h4 class="card-title"><a>Card title</a></h4>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Button</a>
-                    </div>
-                </div>
-
-                <div class="card w-25">
-                        <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <h4 class="card-title"><a>Card title</a></h4>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Button</a>
-                        </div>
-                    </div>
-
-                    <div class="card w-25">
-                            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h4 class="card-title"><a>Card title</a></h4>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Button</a>
+                <div class="ghettoScroll scroll-fix card">
+                    <div class="container-fluid vertical-center">
+                        <div class="card" id="headerCard">
+                            <img src="media/logo.png" id="headerLogo">
+                            <div class="text-center my-0" id="headerCardBody">
+                                <h1 class="card-title text-center"><a>TipEASE</a></h1>
+                                <p class="card-text text-center">Leave A Tip!</p>
+                                <a href="#" class="btn btn-primary" id="signInBtn">Sign In</a>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="ghettoScroll scroll-fix card">
+                    <div class="card w-25 m-4">
+                        <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h4 class="card-title"><a>Title</a></h4>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Button</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ghettoScroll scroll-fix card">
+                    <div class="card w-25 m-5">
+                        <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h4 class="card-title"><a>Title</a></h4>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Button</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ghettoScroll scroll-fix card">
+                    <div class="card w-25 m-auto">
+                        <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h4 class="card-title"><a>Title</a></h4>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Button</a>
+                        </div>
+                    </div>
+                </div>
             </section>
 
         <!-- What is TipEASE?
