--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
+											<li><a href="signIn.html">Log In</a></li>
 											<li><a href="#one" class="more scrolly">Top Content</a></li>
 											<li><a href="#two" class="more scrolly">Mid Content</a></li>
 											<li><a href="#three" class="more scrolly">Bottom Content<a></li>
 											<li><a href="contact.html">Contact Us</a></li>
-											<li><a href="signIn.html">Log In</a></li>
-											<li><a href="signUp.html">Sign Up</a></li>
 										</ul>
 									</div>
 								</li>
@@ -45,7 +44,7 @@
 							site template freebie<br />
 							crafted by HTML5 UP</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Sign Up</a></li>
+								<li><a href="signUp.html" class="button primary">Sign Up</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -61,9 +60,9 @@
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon fa-thumbs-o-up major style3"><span class="label">Lorem</span></span></li>
+								<li><span class="icon fa-address-book-o major style2"><span class="label">Ipsum</span></span></li>
+								<li><span class="icon fa-dollar major style1"><span class="label">Dolor</span></span></li>
 							</ul>
 						</div>
 					</section>
