--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>TipEASE</h2>
-							<p>Leave A Tip!<br />
+							<p>Another fine responsive<br />
+							site template freebie<br />
+							crafted by HTML5 UP</p>
 							<ul class="actions special">
 								<li><a href="signUp.html" class="button primary">Sign Up</a></li>
 							</ul>
