--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="signIn.html">Log In</a></li>
+											<li><a href="https://tipease-frontend.netlify.com/login">Sign In</a></li>
 											<li><a href="#one" class="more scrolly">Top Content</a></li>
 											<li><a href="#two" class="more scrolly">Mid Content</a></li>
 											<li><a href="#three" class="more scrolly">Bottom Content<a></li>
@@ -38,13 +38,15 @@
 
 				<!-- BANNER -->
 					<section id="banner">
+						<div class="videoBG">
+							<video src=""></video>
+						</div>
 						<div class="inner">
 							<h2>TipEASE</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by HTML5 UP</p>
+							<p>Welcome To TipEASE, <br />
+							Don't Forget To Leave A Tip!</p>
 							<ul class="actions special">
-								<li><a href="signUp.html" class="button primary">Sign Up</a></li>
+								<li><a href="https://tipease-frontend.netlify.com/register" class="button primary">Sign Up</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
