Banner text altered

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="https://tipease-frontend.netlify.com/login">Sign In</a></li>
 											<li><a href="#one" class="more scrolly">Top Content</a></li>
 											<li><a href="#two" class="more scrolly">Mid Content</a></li>
 											<li><a href="#three" class="more scrolly">Bottom Content<a></li>
+											<li><a href="https://tipease-frontend.netlify.com/login">Sign In</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
 										</ul>
 									</div>
@@ -38,9 +38,6 @@
 
 				<!-- BANNER -->
 					<section id="banner">
-						<div class="videoBG">
-							<video src=""></video>
-						</div>
 						<div class="inner">
 							<h2>TipEASE</h2>
 							<p>Welcome To TipEASE, <br />
@@ -51,13 +48,15 @@
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
+					<!-- <video autoplay muted loop id="myVideo">
+						<source src="images/videobg.mp4" type="video/mp4">
+					</video> -->
 
 				<!-- TOP CONTENT -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
+								<h2>What Is TipEASE?</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
