--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="signIn.html">Log In</a></li>
 											<li><a href="#one" class="more scrolly">Top Content</a></li>
 											<li><a href="#two" class="more scrolly">Mid Content</a></li>
 											<li><a href="#three" class="more scrolly">Bottom Content<a></li>
+											<li><a href="https://tipease-frontend.netlify.com/login">Sign In</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
 										</ul>
 									</div>
@@ -40,22 +40,23 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>TipEASE</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by HTML5 UP</p>
+							<p>Welcome To TipEASE, <br />
+							Don't Forget To Leave A Tip!</p>
 							<ul class="actions special">
-								<li><a href="signUp.html" class="button primary">Sign Up</a></li>
+								<li><a href="https://tipease-frontend.netlify.com/register" class="button primary">Sign Up</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
+					<!-- <video autoplay muted loop id="myVideo">
+						<source src="images/videobg.mp4" type="video/mp4">
+					</video> -->
 
 				<!-- TOP CONTENT -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
+								<h2>What Is TipEASE?</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
