Commenting and Colors

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
+											<li><a href="index.html" class="current">Home</a></li>
 											<li><a href="#one" class="more scrolly">Top Content</a></li>
 											<li><a href="#two" class="more scrolly">Mid Content</a></li>
 											<li><a href="#three" class="more scrolly">Bottom Content<a></li>
@@ -46,11 +46,8 @@
 								<li><a href="https://tipease-frontend.netlify.com/register" class="button primary">Sign Up</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="scrolly"><img src="images/tipease-mobile.png" alt="#"></a>
 					</section>
-					<!-- <video autoplay muted loop id="myVideo">
-						<source src="images/videobg.mp4" type="video/mp4">
-					</video> -->
 
 				<!-- TOP CONTENT -->
 					<section id="one" class="wrapper style1 special">
