Fixing issues with the banner items

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html" class="current">Home</a></li>
-											<li><a href="#one" class="more scrolly">Top Content</a></li>
+											<li><a href="#one" class="more scrolly">What Is TipEASE?</a></li>
 											<li><a href="#two" class="more scrolly">Mid Content</a></li>
 											<li><a href="#three" class="more scrolly">Bottom Content<a></li>
 											<li><a href="https://tipease-frontend.netlify.com/login">Sign In</a></li>
@@ -46,7 +46,7 @@
 								<li><a href="https://tipease-frontend.netlify.com/register" class="button primary">Sign Up</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="scrolly"><img src="images/tipease-mobile.png" alt="#"></a>
+						<a href="#one" class="scrolly phone"><img src="images/tipease-mobile.png" alt="#"></a>
 					</section>
 
 				<!-- TOP CONTENT -->
