--- a/index.html
+++ b/index.html
@@ -70,21 +70,38 @@
 				<!-- MID CONTENT -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>1. Recieve A Service<br />
+							<div class="image" id="loopy">
+								<img src="images/alts/service workers/service_one.jpg"/>
+								<img src="images/alts/service workers/service_two.jpg"/>
+								<img src="images/alts/service workers/service_three.jpg"/>
+							</div>
+							<div class="content">
+								<h2>1. Recieve Service<br />
 								</h2>
 								<p>Start by recieving a service and with a pleasurable experience.</p>
 							</div>
 						</section>
+
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+							<div class="image" id="loopy">
+								<img src="images/pic01.jpg"/>
+								<img src="images/pic02.jpg"/>
+								<img src="images/pic03.jpg"/>
+							</div>
+							<div class="content">
 								<h2>2. Leave A Tip<br />
 								</h2>
 								<p>Then leave a tip for the employee that provided the service.</p>
 							</div>
 						</section>
+
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+							<div class="image" id="loopy">
+								<img src="images/alts/reviews/review_feedback.jpeg"/>
+								<img src="images/alts/reviews/review_mobile.jpg"/>
+								<img src="images/alts/reviews/review_mac.jpg"/>
+							</div>
+							<div class="content">
 								<h2>3. Leave A Review<br />
 								</h2>
 								<p>Lastly, leave a review for the service worker </p>
