About Us Page Created

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 											<li><a href="#two" class="more scrolly">How Does TipEASE Work?</a></li>
 											<li><a href="#three" class="more scrolly">Why Use TipEASE?<a></li>
 											<li><a href="https://tipease-frontend.netlify.com/login">Sign In</a></li>
-											<li><a href="about.html">About Us</a></li>
+											<li><a href="#">About Us</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
 										</ul>
 									</div>
@@ -37,9 +37,52 @@
 						</nav>
 					</header>
 
-				<!-- FORM-->
-					<section id="contact">
-						
+				<!-- ABOUT -->
+					<section id="about" class="wrapper alt style2">
+						<section class="spotlight-2">
+							<div class="image">
+								<img src="images/alts/about/brandon.jpg"/>
+							</div>
+							<div class="content">
+								<h2>Brandon Desselle <a>-</a> Web UI<br />
+								</h2>
+								<ul class="icons">
+                                    <li><a href="https://github.com/BDesselle" class="icon fa-github"><span class="label">Github</span></a></li>
+                                    <li><a href="https://www.linkedin.com/in/brandon-desselle-33b689161/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                                    <li><a href="https://twitter.com/KekklesKat" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                                </ul>
+							</div>
+						</section>
+
+						<section class="spotlight-2">
+							<div class="image">
+								<img src="images/pic01.jpg"/>
+							</div>
+							<div class="content">
+								<h2>Brett Madrid <a>-</a> Front-End<br />
+								</h2>
+								<ul class="icons">
+                                    <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+                                    <li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                                    <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                                </ul>
+							</div>
+						</section>
+
+						<section class="spotlight-2">
+							<div class="image">
+								<img src="images/alts/about/jesse.jpg"/>
+							</div>
+							<div class="content">
+								<h2>Jesse Anderson <a>-</a> Back-End<br />
+								</h2>
+								<ul class="icons">
+                                    <li><a href="https://github.com/Jesse9009" class="icon fa-github"><span class="label">Github</span></a></li>
+                                    <li><a href="https://www.linkedin.com/in/jesseanderson12/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                                    <li><a href="https://twitter.com/JesseAnderson90" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                                </ul>
+							</div>
+						</section>
 					</section>
 
 				<!-- FOOTER -->
@@ -54,7 +97,7 @@
 						</ul>
 					</footer>
 
-			</div><!-- Wrapper -->
+			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
