--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 											<li><a href="#two" class="more scrolly">How Does TipEASE Work?</a></li>
 											<li><a href="#three" class="more scrolly">Why Use TipEASE?<a></li>
 											<li><a href="https://tipease-frontend.netlify.com/login">Sign In</a></li>
-											<li><a href="#">About Us</a></li>
+											<li><a href="about.html">About Us</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
 										</ul>
 									</div>
