Contact Us Created

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
 						<section class="spotlight-2">
 							<div class="image">
-								<img src="images/pic01.jpg"/>
+								<img src="images/alts/about/brett.jpg"/>
 							</div>
 							<div class="content">
 								<h2>Brett Madrid <a>-</a> Front-End<br />
