--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,22 @@
 
 				<!-- FORM-->
 					<section id="contact">
-						
+						<div id="cont">
+							<form action="https://formspree.io/desselle.brandon2@gmail.com" method="POST">
+
+								<label for="name">Name</label>
+								<input type="text" name="Name">
+
+								<label for="email">Email</label>
+								<input type="email" name="Email">
+
+								<label for="message">Message</label>
+								<textarea name="Message" cols="50" rows="10"></textarea>
+
+
+								<input type="submit" value="Submit">
+							</form>
+						</div>
 					</section>
 
 				<!-- FOOTER -->
