--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<!-- <link rel="logo" href="images/logo.png" /> -->
+		<link rel="logo" href="images/logo.png" />
 		<title>TipEASE</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -24,11 +24,11 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html" class="current">Home</a></li>
-											<li><a href="#one" class="more scrolly">What Is TipEASE?</a></li>
-											<li><a href="#two" class="more scrolly">How Does TipEASE Work?</a></li>
-											<li><a href="#three" class="more scrolly">Why Use TipEASE?<a></li>
 											<li><a href="https://tipease-frontend.netlify.com/login">Sign In</a></li>
-											<li><a href="#">About Us</a></li>
+											<li><a href="#one" class="more scrolly">What Is It?</a></li>
+											<li><a href="#two" class="more scrolly">How Does It Work?</a></li>
+											<li><a href="#three" class="more scrolly">Why Use It?<a></li>
+											<li><a href="about.html">About Us</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
 										</ul>
 									</div>
@@ -44,8 +44,8 @@
 								<img src="images/alts/about/brandon.jpg"/>
 							</div>
 							<div class="content">
-								<h2>Brandon Desselle <a>-</a> Web UI<br />
-								</h2>
+								<h2>Brandon Desselle <a>-</a></h2>
+								<h2> Web UI</h2>
 								<ul class="icons">
                                     <li><a href="https://github.com/BDesselle" class="icon fa-github"><span class="label">Github</span></a></li>
                                     <li><a href="https://www.linkedin.com/in/brandon-desselle-33b689161/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -59,12 +59,12 @@
 								<img src="images/alts/about/brett.jpg"/>
 							</div>
 							<div class="content">
-								<h2>Brett Madrid <a>-</a> Front-End<br />
-								</h2>
+								<h2>Brett Madrid <a>-</a></h2>
+								<h2> Front-End</h2>
 								<ul class="icons">
-                                    <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-                                    <li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                                    <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                                    <li><a href="https://github.com/brettmadrid" class="icon fa-github"><span class="label">Github</span></a></li>
+                                    <li><a href="https://www.linkedin.com/in/brett-madrid-460a02158/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                                    <li><a href="https://twitter.com/NeoMadrid" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
                                 </ul>
 							</div>
 						</section>
@@ -74,8 +74,8 @@
 								<img src="images/alts/about/jesse.jpg"/>
 							</div>
 							<div class="content">
-								<h2>Jesse Anderson <a>-</a> Back-End<br />
-								</h2>
+								<h2>Jesse Anderson <a>-</a></h2>
+								<h2> Back-End</h2>
 								<ul class="icons">
                                     <li><a href="https://github.com/Jesse9009" class="icon fa-github"><span class="label">Github</span></a></li>
                                     <li><a href="https://www.linkedin.com/in/jesseanderson12/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -83,19 +83,22 @@
                                 </ul>
 							</div>
 						</section>
+
+						<footer id="footer">
+							<ul class="icons">
+								<li><a href="https://www.linkedin.com/in/brandon-desselle-33b689161/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/BDesselle" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="mailto:brandon.desselle2@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
+							<ul class="copyright">
+								<li>&copy; Copyright 2019</li><li><a href="https://www.linkedin.com/in/brandon-desselle-33b689161/">Brandon Desselle</a></li>
+							</ul>
+						</footer>
+
 					</section>
 
 				<!-- FOOTER -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/brandon-desselle-33b689161/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/BDesselle" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="mailto:brandon.desselle2@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Copyright 2019</li><li><a href="https://www.linkedin.com/in/brandon-desselle-33b689161/">Brandon Desselle</a></li>
-						</ul>
-					</footer>
+					
 
 			</div>
 
