--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html" class="current">Home</a></li>
-											<li><a href="https://tipease-frontend.netlify.com/login">Sign In</a></li>
+											<li><a href="https://tipease.herokuapp.com/login">Sign In</a></li>
 											<li><a href="#one" class="more scrolly">What Is It?</a></li>
 											<li><a href="#two" class="more scrolly">How Does It Work?</a></li>
 											<li><a href="#three" class="more scrolly">Why Use It?<a></li>
@@ -45,7 +45,7 @@
 							<p>Welcome To TipEASE, <br />
 							Don't Forget To Leave A Tip!</p>
 							<ul class="actions special">
-								<li><a href="https://tipease-frontend.netlify.com/register" class="button primary">Sign Up</a></li>
+								<li><a href="https://tipease.herokuapp.com/register" class="button primary">Sign Up</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="scrolly phone"><img src="images/tipease-mobile.png" alt="#"></a>
@@ -86,7 +86,7 @@
 						<section class="spotlight">
 							<div class="image" id="loopy">
 								<img src="images/pic01.png"/>
-								<img src="images/pic02.png"/>
+								<img src="images/pico02.png"/>
 								<img src="images/pic03.png"/>
 							</div>
 							<div class="content">
