--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html" class="current">Home</a></li>
-											<li><a href="https://tipease-frontend.netlify.com/login">Sign In</a></li>
+											<li><a href="https://tipease.herokuapp.com/login">Sign In</a></li>
 											<li><a href="#one" class="more scrolly">What Is It?</a></li>
 											<li><a href="#two" class="more scrolly">How Does It Work?</a></li>
 											<li><a href="#three" class="more scrolly">Why Use It?<a></li>
